--- a/css/mobile.css
+++ b/css/mobile.css
@@ -13,6 +13,9 @@
   }
 }
 
+body {
+  position:relative;
+}
 .modul-h1 {
   font-size: 1.2em;
   line-height: 1.5em;
@@ -844,6 +847,8 @@ header {
   top: 0;
   left: 0;
   z-index: 100;
+  -webkit-transition:translate3d(0,0,0);
+  transition:translate3d(0,0,0);
   background-color: white;
   width: 100%;
   -moz-box-sizing: border-box;
