--- a/sass/components/_notifications.scss
+++ b/sass/components/_notifications.scss
@@ -16,7 +16,7 @@
 		height:22px;
 		top:1rem;
 		left:1rem;
-		background-image: url('/img/icon_info.svg');
+		background-image: url('../img/icon_info.svg');
 		background-size:100%;
 	}
 }
@@ -36,7 +36,7 @@
 		height:22px;
 		top:1rem;
 		left:1rem;
-		background-image: url('/img/icon_warning.svg');
+		background-image: url('../img/icon_warning.svg');
 		background-size:100%;
 	}
 }
