--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -86,6 +86,17 @@ $base-line-height: 150% !default;
   clip: auto;
 }
 
+%box-shadow-standard { 
+    -webkit-box-shadow: 0px 4px 10px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 4px 10px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 10px -4px rgba(0,0,0,0.75);
+}
+%box-shadow-quickview { 
+    -webkit-box-shadow: 0px -4px 10px -4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px -4px 10px -4px rgba(0,0,0,0.75);
+    box-shadow: 0px -4px 10px -4px rgba(0,0,0,0.75);
+}
+
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic);
 
 // We use these to control various global styles
@@ -119,7 +130,7 @@ $info-color: #a0d3e8 !default;
 
 // Other Colors
 /* Variables */
-$black: #232323 !default;
+$black: #42464d !default;
 $light-blue: #eff9ff !default;
 $green: #a5c400 !default;
 $dark-green: darken($green, 5%) !default;
