--- a/sass/style/_header.scss
+++ b/sass/style/_header.scss
@@ -164,7 +164,7 @@
 		border-top:3px solid $primary-color;
 		overflow:hidden;
 		z-index:100;
-		box-shadow: 0px 6px 8px $dark-grey;
+		@extend %box-shadow-standard;
 		
 		&.girls {
 			left:0;
