--- a/sass/style/_footer.scss
+++ b/sass/style/_footer.scss
@@ -15,7 +15,6 @@
 		}
 	}
 	.footer-h {
-		text-transform: uppercase;
 		font-weight: bold;
 		padding-bottom:0.5rem;
 	}
@@ -31,6 +30,7 @@
 		position:relative;
 		& input {
 			width:100%;
+			margin:0;
 		}
 		& button {
 			position:absolute;
