--- a/sass/style/_pue.scss
+++ b/sass/style/_pue.scss
@@ -1,6 +1,6 @@
 .pue-content {
 	text-align:center;
-	
+
 	.pue-prize {
 			padding: 10px 0;
 	}
@@ -21,7 +21,7 @@
 	}
 	.pue-p-name,
 	.pue-prize {
-			cursor:pointer;	
+			cursor:pointer;
 	}
 	.pue-filter-select {
 		width:100%;
@@ -34,9 +34,9 @@
 		padding:14px 1px;
 		border-radius:50%;
 		height:40px;
-		width:40px;		
+		width:40px;
 		color:white;
-		font-size:0.8em;	
+		font-size:0.8em;
 		&.sale {
 			background-color:$red;
 		}
@@ -47,10 +47,10 @@
 		bottom:0;
 		width:100%;
 		background-color:$black;
-		padding:10px 20px;	
+		padding:10px 20px;
 		color:white;
 		transform: translate3d(0,40px,0);
-		opacity:0;	
+		opacity:0;
 		transition: all .5s;
 		cursor:pointer;
 		@extend %box-shadow-quickview;
@@ -60,9 +60,9 @@
 		}
 	}
 	& .pue-img:hover .quickview {
-		transform: translate3d(0,0,0);	
-		opacity:0.9;	
-		cursor:pointer;		
+		transform: translate3d(0,0,0);
+		opacity:0.9;
+		cursor:pointer;
 	}
 
 	@-webkit-keyframes fadeIn {
@@ -91,8 +91,8 @@
 		-webkit-animation-fill-mode: both;
 		animation-fill-mode: both;
 		-webkit-animation-name: fadeIn;
-		animation-name: fadeIn;	
-		
+		animation-name: fadeIn;
+
 	}
 	& .pb2 {
 		  -webkit-animation-delay: .1s; /* Chrome, Safari, Opera */
@@ -194,45 +194,10 @@
 		}
 	}
 
-	.sidebar2 {
-		.open > a {
-			font-weight:bold;
-		}
-		.open:before {
-			font-weight:bold;
-		}
-		.level2 {
-			border-top:1px solid silver;
-			border-bottom:1px solid silver;
-			padding-bottom:0.2em;
-			margin-bottom:0.2em;
-			padding-top:0.2em;
-			margin-top:0.2em;
-		}
-	}
-
-
-	.sidebar3 {
-		.level1 {
-			padding-left:0;
-			& > li {
-				position:relative;
-				&:after {
-					content:" ";
-					display:block;
-					position:absolute;
-					top:0;
-					left:0;
-					width:100%;
-					height:1px;
-					background-color:silver;
-				}
-			}	
-			& li {
-				padding-left:1rem;
-			}		
-		}
-		.level2 {
+	.sidebar {
+		.open {
+				border-top:1px solid silver;
+				border-bottom:1px solid silver;
 		}
 	}
 
@@ -241,7 +206,52 @@
 
 }
 
+#filter {
+	box-shadow: 0 0px 0px transparent;
+	transition: all 0.2s;
+	margin: 1px;
+	border: 1px solid silver;
+	position: relative;
+	width: 100%;
+	&:hover {
+		@extend %box-shadow-standard;
+	}
+	.filter-txt {
+		position: relative;
+		cursor: pointer;
+		padding:1em;
+		width: 100%;
+		&:after {
+			content: "›";
+			display: block;
+			position: absolute;
+			right: 0;
+			top:50%;
+			transform: translate3d(-15px, -50%, 0) rotate(90deg);
+		}
+	}
 
+	& .filter-content {
+		display:none;
+	}
+	&.active {
+		.filter-txt {
+			background-color: $grey;
+		}
+		.filter-content {
+			display: block;
+			position: absolute;
+			top: 100%;
+			left:0;
+			border: 1px solid silver;
+			z-index: 100;
+			width: 100%;
+			padding:5px;
+			background-color: white;
+			@extend %box-shadow-standard;
+		}
+	}
+}
 
 #toTop {
 	display:block;
@@ -266,8 +276,8 @@
 	font-size: 1.5rem;
 			transition: all .2s;
 }
-#toTop:hover .circle { 
-	
+#toTop:hover .circle {
+
 	background-color:silver;
 }
 #toTop:hover a,
