--- a/sass/style/_header.scss
+++ b/sass/style/_header.scss
@@ -108,6 +108,7 @@
 		padding:0;
 		margin:0;
 		width:100%;
+		border-bottom: 3px solid $primary-color;
 	}
 	& .level1 > .menu-item {
 		background-color: $light-grey;
