--- a/css/main.css
+++ b/css/main.css
@@ -746,7 +746,7 @@ a {
   text-decoration: none;
   line-height: inherit; }
   a.link {
-    color: #11829e; }
+    color: #00a19a; }
   a:hover, a:focus {
     text-decoration: underline; }
   a img {
@@ -814,7 +814,7 @@ h1.decorated, .h1.decorated {
     height: 2px;
     content: "";
     width: 2em;
-    background-color: #11829e; }
+    background-color: #00a19a; }
 
 h2.decorated, .h2.decorated {
   position: relative; }
@@ -823,7 +823,7 @@ h2.decorated, .h2.decorated {
     height: 2px;
     content: "";
     width: 2em;
-    background-color: #11829e; }
+    background-color: #00a19a; }
 
 h3.decorated, .h3.decorated {
   position: relative; }
@@ -832,7 +832,7 @@ h3.decorated, .h3.decorated {
     height: 2px;
     content: "";
     width: 2em;
-    background-color: #11829e; }
+    background-color: #00a19a; }
 
 h4.decorated, .h4.decorated {
   position: relative; }
@@ -841,7 +841,7 @@ h4.decorated, .h4.decorated {
     height: 2px;
     content: "";
     width: 2em;
-    background-color: #11829e; }
+    background-color: #00a19a; }
 
 h5.decorated, .h5.decorated {
   position: relative; }
@@ -850,7 +850,7 @@ h5.decorated, .h5.decorated {
     height: 2px;
     content: "";
     width: 2em;
-    background-color: #11829e; }
+    background-color: #00a19a; }
 
 h6.decorated, .h6.decorated {
   position: relative; }
@@ -859,7 +859,7 @@ h6.decorated, .h6.decorated {
     height: 2px;
     content: "";
     width: 2em;
-    background-color: #11829e; }
+    background-color: #00a19a; }
 
 .modul-h1 {
   font-size: 1.2em;
@@ -1069,10 +1069,10 @@ input {
     padding: 0.6em;
     font-size: 0.6em; }
   .btn.btn-secondary {
-    background-color: #11829e;
-    border: 1px solid #11829e; }
+    background-color: #00a19a;
+    border: 1px solid #00a19a; }
     .btn.btn-secondary:hover {
-      color: #11829e; }
+      color: #00a19a; }
   .btn:hover {
     text-decoration: none;
     background-color: transparent;
@@ -1084,9 +1084,9 @@ input {
       background: #42464d;
       color: white; }
     .btn.btn-outline.btn-secondary {
-      color: #11829e; }
+      color: #00a19a; }
     .btn.btn-outline.btn-secondary:hover {
-      background-color: #11829e;
+      background-color: #00a19a;
       color: white; }
   .btn span {
     -webkit-box-align: center;
@@ -3786,7 +3786,7 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
     height: 1.7em;
     width: 1.7em; }
   #header .basket .cart-count {
-    background-color: #11829e;
+    background-color: #00a19a;
     width: 100%;
     height: 100%;
     display: block;
@@ -3836,7 +3836,8 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
     list-style-type: none;
     padding: 0;
     margin: 0;
-    width: 100%; }
+    width: 100%;
+    border-bottom: 3px solid #00a19a; }
   #main-nav .level1 > .menu-item {
     background-color: #ededed;
     flex-grow: 1;
@@ -3848,7 +3849,7 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
     /* Safari */
     transition: all .6s; }
     #main-nav .level1 > .menu-item:hover {
-      background-color: #11829e; }
+      background-color: #00a19a; }
       #main-nav .level1 > .menu-item:hover > a {
         color: white; }
       #main-nav .level1 > .menu-item:hover .level2 {
@@ -3856,7 +3857,7 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
         -webkit-animation-name: fadeInDownBig;
         animation-name: fadeInDownBig; }
     #main-nav .level1 > .menu-item.active {
-      background-color: #11829e; }
+      background-color: #00a19a; }
       #main-nav .level1 > .menu-item.active > a {
         color: white; }
   #main-nav .arrow {
@@ -3885,7 +3886,7 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
     width: 800px;
     background-color: white;
     border: 1px solid silver;
-    border-top: 3px solid #11829e;
+    border-top: 3px solid #00a19a;
     overflow: hidden;
     z-index: 100;
     /* Portrait */
@@ -4018,14 +4019,14 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
       color: #42464d;
       background-color: #efefef; }
       .checkout-steps-container .checkout-step.checkout-step-1:before {
-        background-color: #11829e; }
+        background-color: #00a19a; }
       .checkout-steps-container .checkout-step.checkout-step-1::after {
         background-color: #efefef; }
   .checkout-steps-container.step-2 .checkout-step.checkout-step-1 {
     color: #e2e2e2;
     background-color: white; }
     .checkout-steps-container.step-2 .checkout-step.checkout-step-1:before {
-      background-color: #11829e;
+      background-color: #00a19a;
       content: "✔"; }
     .checkout-steps-container.step-2 .checkout-step.checkout-step-1::after {
       background-color: white; }
@@ -4033,14 +4034,14 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
     color: #42464d;
     background-color: #efefef; }
     .checkout-steps-container.step-2 .checkout-step.checkout-step-2:before {
-      background-color: #11829e; }
+      background-color: #00a19a; }
     .checkout-steps-container.step-2 .checkout-step.checkout-step-2::after {
       background-color: #efefef; }
   .checkout-steps-container.step-3 .checkout-step.checkout-step-1 {
     color: #e2e2e2;
     background-color: white; }
     .checkout-steps-container.step-3 .checkout-step.checkout-step-1:before {
-      background-color: #11829e;
+      background-color: #00a19a;
       content: "✔"; }
     .checkout-steps-container.step-3 .checkout-step.checkout-step-1::after {
       background-color: white; }
@@ -4048,7 +4049,7 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
     color: #e2e2e2;
     background-color: white; }
     .checkout-steps-container.step-3 .checkout-step.checkout-step-2:before {
-      background-color: #11829e;
+      background-color: #00a19a;
       content: "✔"; }
     .checkout-steps-container.step-3 .checkout-step.checkout-step-2::after {
       background-color: white; }
@@ -4056,7 +4057,7 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
     color: #42464d;
     background-color: #efefef; }
     .checkout-steps-container.step-3 .checkout-step.checkout-step-3:before {
-      background-color: #11829e; }
+      background-color: #00a19a; }
     .checkout-steps-container.step-3 .checkout-step.checkout-step-3::after {
       background-color: #efefef; }
 
@@ -4092,7 +4093,7 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
       right: 0;
       height: 100%;
       width: 2.5rem;
-      background-color: #11829e;
+      background-color: #00a19a;
       color: white;
       border: none; }
 
@@ -4238,10 +4239,10 @@ button[disabled]:active, button[disabled], input[type="button"][disabled]:active
 .side-navigation li {
   padding-left: 1rem; }
 .side-navigation .list-item {
-  color: #11829e;
+  color: #00a19a;
   position: relative; }
   .side-navigation .list-item a {
-    color: #11829e;
+    color: #00a19a;
     padding: 7px 0;
     display: inline-block; }
   .side-navigation .list-item.active, .side-navigation .list-item.active a {
